# todoist-sh

./: README.md  pyproject.toml
defaults/: config.toml
src/todoist_sh/: __init__.py  args.py  commands.py  config.py  definitions.py  sdk.py
src/todoist_sh/config/: __init__.py  encrypt.py
